CHORE: build.gradle, application.properties 파일 수정
- postgresql과 연결중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=todo
+spring.datasource.url=jdbc:postgresql://localhost:5433/todoapp
+spring.datasource.username=todoappUser
+spring.datasource.password=todo0630
+spring.datasource.driver-class-name=org.postgresql.Driver
